[package]
name = "oxide"
version = "0.1.0"
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
description = "Web app using Rust lang."
edition = "2018"

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
toml = "0.5.3"
failure = "0.1.5"
futures = "0.1.29"
warp = "0.1.20"
diesel =  { version = "1.4.2", "features" = ["postgres", "r2d2"] }
terminator = "0.1.0"
femme = "1.2.0"
log = "0.4.8"
dotenv = "0.14.1"
tokio-threadpool = "0.1.16"
ratelimit_meter = "5.0.0"
erased-serde = "0.3.9"
serde_json = "1.0.41"
chrono = "0.4.9"

[workspace]
members = [
  "sentry",
]
