[package]
name = "oxide"
version = "0.2.0"
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
description = "Web app using Rust lang."
edition = "2018"

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
sentry = { path = "./sentry" }
toml = "0.5.3"
failure = "0.1.5"
futures = "0.1.29"
warp = "0.1.20"
diesel =  { version = "1.4.2", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
terminator = "0.1.0"
femme = "1.2.0"
log = "0.4.8"
dotenv = "0.14.1"
tokio-threadpool = "0.1.16"
ratelimit_meter = "5.0.0"
erased-serde = "0.3.9"
serde_json = "1.0.41"
chrono = { version = "0.4.9", features = ["serde"] }
validator_derive = "0.9.0"
validator = "0.9.0"
lazy_static = "1.4.0"
regex = "1.3.1"
bytes = "0.4.12"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
heck = "0.3.1"
r2d2 = "0.8.5"
derive_more = "0.15.0"
envy = "0.4.0"
typename = "0.1.1"
typename_derive = "0.1.3"

[workspace]
members = [
  "sentry",
]
