[package]
name = "sentry"
version = "0.1.0"
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
edition = "2018"

[dependencies]
argonautica = "0.2.0"
base64 = "0.10.1"
dotenv = "0.14.1"
failure = "0.1.5"
once_cell = "1.2.0"
rand = "0.7.2"
toml = "0.5.3"
serde = "1.0.101"
chrono = "0.4.9"
log = "0.4.8"
femme = "1.2.0"
magic-crypt = "2.1.7"
asap = "0.7.2"
asap_deps_keyserver = "0.1.1"
serde_json = "1.0.40"
